# haskell-the-hard-way

./: learning-haskell.cabal
src/: Main.hs
