name:                learning-haskell
version:             0.1.0.0
homepage:            https://github.com/vanashimko/haskell-the-hard-way
license:             MIT
license-file:        LICENSE
author:              Ivan Shimko
maintainer:          vana.shimko@gmail.com
copyright:           2017 Ivan Shimko
category:            Learning
build-type:          Simple
cabal-version:       >=1.10

executable learning-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
